# fastapi-kafka-test

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
