[project]
name = "kafka"
version = "0.1.0"
description = "Kafka fastapi example"
authors = [
    {name = "dmvaled",email = "dmvaled@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
